--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WomenHack</title>
 
 
@@ -17,11 +18,17 @@
 
     <link rel="stylesheet" href="css/style.css" />
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/main.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
   </head>
   <body>
-    <header>
+    <header class="header">
         <h1>Let's Bash Sterotypes in STEM!</h1>
 
         <div class="arrow bounce">
@@ -30,9 +37,16 @@
         <!-- <a href="#categories">Link</a> -->
     </header>
     <a name="categories"></a>
-    <div id="circle-nav" class="container">
-          <a href="#did-u-kno"><img id="top" src="img/peaches.png" width="140" height="140" alt="..." class="img-circle center-block"></a>
-    </div>
+    <main role="main">
+        <section class="Animation">
+            <a href="#"><div class="art">art</div></a>
+            <a href="#"><div class="music">music</div></a>
+            <a href="#"><div class="food">food</div></a>
+            <a href="#"><div class="sport">sport</div></a>
+            <a href="#"><div class="game">Game</div></a>
+            <a href="#"><div class="movie">Movie</div></a>
+        </section>
+    </main>
 
     <a name="did-u-kno"></a>
     <div id="did-u-kno">
