--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </header>
     <a name="categories"></a>
     <main role="main">
+      <h2>What do you do for fun?</h2>
         <section class="Animation">
             <a href="#"><div class="art">art</div></a>
             <a href="#"><div class="music">music</div></a>
