Add jquery to hide and show sections

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
+    <script src="js/script.js"></script>
+
   </head>
   <body>
     <header class="header">
@@ -41,7 +43,7 @@
             <a href="#"><div class="food">food</div></a>
             <a href="#"><div class="sport">sport</div></a>
             <a href="#"><div class="game">Game</div></a>
-            <a href="#"><div class="movie">Movie</div></a>
+            <a href="#did-u-kno" id="movie"><div class="movie">Movie</div></a>
         </section>
     </main>
 
