--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <footer class="footer text-footer">
         <section class="container">
             <div class="links">
-                <a href="AboutUs.html" target="_blank" style="color:orangered"><i class="fa fa-user fa-2x" aria-hidden="true"><p>About Us</p></i></a>
+                <a href="AboutUs.html" target="_blank"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;About Us</a>
             </div>
-            
+
         </section>
     </footer>
 
