--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/main.css" />
+    <!-- <link rel="stylesheet" href="css/main.css" /> -->
 
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
