--- a/index.html
+++ b/index.html
@@ -36,17 +36,40 @@
     </header>
     <a name="categories"></a>
     <main role="main">
-      <h2>What do you do for fun?</h2>
-        <section class="Animation">
+      <h2>What do you like to do for fun?</h2>
+        <table>
+          <tr>
+            <td></td>
+            <!--rockband -->
+            <td><a href="#"><div class="art"><i class="fa fa-gamepad"><p>Games</p></i></div></a></td>
+            <!-- disney imagineer -->
+            <td><a href="#"><div class="art"><i class="fa fa-paint-brush"><p>Amusement Parks</p></i></div></a></td>
+            <td></td>
+          </tr>
+          <tr>
+            <!-- warhammer-->
+            <td><a href="#"><div class="music"><i class="fa fa-paint-brush"><p>Art</p></i></div></a></td>
+            <td></td>
+            <td></td>
+            <!-- britney -->
+            <td><a href="#"><div class="music"><i class="fa fa-music"><p>Music</p></i></div></a></td>
+          </tr>
+          <tr>
+            <!-- moana -->
+            <td><a href="#"><div class="sport"><i class="fa fa-soccer-ball-o"><p>Movies</p></i></div></a></td>
+            <td></td>
+            <td></td>
+            <!-- treasury web dev -->
+            <td><a href="#"><div class="game"><i class="fa fa-gamepad"><p>Politics</p></i></div></a></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><a href="#did-u-kno" id="movie"><div class="movie"><i class="fa fa-spoon"><p>Food</p></i></div></a></td>
+            <td><a href="#did-u-kno" id="movie"><div class="movie"><i class="fa fa-soccer-ball-o"><p>Sports</p></i></div></a></td>
+            <td></td>
+          </tr>
 
-            <a href="#"><div class="art"><i class="fa fa-paint-brush"><p>art</p></i></div></a>
-            <a href="#"><div class="music"><i class="fa fa-music"><p>Music</p></i></div></a>
-            <a href="#"><div class="food"><i class="fa fa-spoon"><p>food</p></i></div></a>
-            <a href="#"><div class="sport"><i class="fa fa-soccer-ball-o"><p>Sport</p></i></div></a>
-            <a href="#"><div class="game"><i class="fa fa-gamepad"><p>Game</p></i></div></a>
-            <a href="#did-u-kno" id="movie"><div class="movie"><i class="fa fa-file-movie-o"><p>Movie</p></i></div></a>
-
-        </section>
+        </table>
     </main>
 
     <a name="did-u-kno"></a>
